# scratchpad

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: StandardProjectSettings.cmake
src/: CMakeLists.txt  cond_variable.cpp  dir_iterator.cpp  find_is_broken.cpp  five.cpp  fork.cpp  mmap.cpp  op_bool.cpp  remove_first_odd_number.cpp  rusage.cpp  self_path.cpp  std_thread.cpp  thread.cpp  thread_cost.cpp
